@@ -1,5 +1,15 @@
 2008-06-09  Carlos Garnacho  <carlos@imendio.com>
 
+	* src/tracker-indexer/tracker-indexer-db.[ch] (tracker_db_set_text):
+	New function, saves text into the content database.
+	* src/tracker-indexer/tracker-indexer.c (init_indexer): create content
+	database.
+	(process_file): get text content and store it in the database.
+	(tracker_indexer_finalize): Do not unref here the database
+	connections, they're already taken care of by the DB manager.
+
+2008-06-09  Carlos Garnacho  <carlos@imendio.com>
+
 	* src/libtracker-db/tracker-db-manager.c (function_compress_string)
 	(function_compress): Added, database function to compress a passed
 	string using zlib.
